--- a/content/blog/New-maps-to-look-at.Rmd
+++ b/content/blog/New-maps-to-look-at.Rmd
@@ -9,4 +9,21 @@ categories:
 tags:
   - maps
   - spatial
+image: /blog/New-maps-to-look-at_files/map_post.jpg # found in static 
 ---
+
+# New data viz for spatial data  
+
+```{r}
+require(leaflet)
+require(dplyr)
+latlon <- c(32.79667, 70.32346) # emory
+ecc_label <- "Somewhere in the world"
+ecc_popup <- "Fly here one day"
+map <- leaflet() %>% 
+  addTiles() %>% 
+  setView(latlon[2],latlon[1],zoom = 10) %>% 
+  addMarkers(latlon[2],latlon[1],label=ecc_label,popup=ecc_popup) 
+map 
+```
+
