--- a/content/blog/pergamino-in-MDE.Rmd
+++ b/content/blog/pergamino-in-MDE.Rmd
@@ -14,4 +14,5 @@ image: images/blog/pergamino_in_MDE/pergamino.jpg
 
 # That time in Medellin 
 
-Removed pergamino.jpg from blog/ folder  
+Removed pergamino.jpg from blog/ folder. CHECK.  
+Changed image size in static/ folder. 
