--- a/content/blog/pergamino-in-MDE.Rmd
+++ b/content/blog/pergamino-in-MDE.Rmd
@@ -1,7 +1,7 @@
 ---
 title: pergamino in MDE
 author: Matt Malishev
-date: '2019-12-07'
+date: '2019-12-08'
 slug: pergamino-in-MDE
 categories:
   - south america
@@ -9,10 +9,11 @@ categories:
 tags:
   - south america
   - mde
-image: images/blog/pergamino_in_MDE/pergamino.jpg
+image: images/blog/pergamino_in_MDE/mde.jpg
 ---
 
 # That time in Medellin 
 
 Removed pergamino.jpg from blog/ folder. CHECK.  
-Changed image size in static/ folder. 
+Changed image size in static/ folder. CHECK.  
+Changed image completely and didn't push.  
